# s2sbot-esp32

./: .clang-format  .cmake-format.yml  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  partitions.csv  pyproject.toml  sdkconfig
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
components/audio/: CMakeLists.txt  Kconfig  afe.c  audio.c
components/audio/codec/: es8311.c  no_codec.c
components/audio/demux/: ogg.c
components/audio/include/audio/codec/: codec.h  no_codec.h
components/audio/include/audio/demux/: ogg.h
components/audio/include/audio/wakewords/: multinet.h  wakenet.h  wakewords.h
components/audio/include/s2sbot/audio/codec/: codec.h  es8311.h  no_codec.h
components/audio/include/s2sbot/audio/demux/: ogg.h
components/audio/include/s2sbot/audio/wakewords/: multinet.h  wakenet.h  wakewords.h
components/audio/wakewords/: multinet.c  wakenet.c
components/cert/: CMakeLists.txt  cert.c
components/collections/: CMakeLists.txt  i16_deque.c  i16_ringbuf.c  i16_vec.c
components/collections/include/s2sbot/collections/: i16_deque.h  i16_ringbuf.h  i16_vec.h
components/device_state/: CMakeLists.txt  device_state.c
components/i2s/: CMakeLists.txt  i2s.c
components/led/: CMakeLists.txt  led.c
components/led/include/: led.h
components/mqtt/: CMakeLists.txt
components/nanopb/: CMakeLists.txt  nanopb.c  pb.h  pb_common.c  pb_common.h  pb_decode.c  pb_decode.h  pb_encode.c  pb_encode.h
components/net/: CMakeLists.txt  net.c
components/ota/: CMakeLists.txt  ota.c
components/piezoelectric/: CMakeLists.txt  piezoelectric.c
components/proto/: CMakeLists.txt  s2s.options  s2s.pb.c  s2s.pb.h  s2s.proto
components/provisioning/: CMakeLists.txt  provisioning.c
components/s2s/: CMakeLists.txt  s2s.c
components/state/: CMakeLists.txt  state.c
components/sysinfo/: CMakeLists.txt  sysinfo.c
components/wakeword/: CMakeLists.txt  wakeword.c
main/: CMakeLists.txt  idf_component.yml  main.c
ref/: esp-idf-esp32s3-docs.url
scripts/: common.sh  setup-dev.sh  setup_dev.sh
scripts/pre-commit/: clang-format.sh  cmake-format.sh
