[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=68",
  "wheel",
]

[project]
name = "s2sbot-tools"
version = "0.1.0"
description = "S2S BOT dev tools"
requires-python = ">=3.12,<3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "cmakelang>=0.6.13",
  "pre-commit>=4.6",
  "ruff>=0.15.12",
]
scripts.s2sbot-tools = "tools.cli:main"

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
where = [ "." ]
include = [ "tools*" ]

[tool.setuptools.exclude-package-data]
"*" = [
  "**/.ruff_cache/**",
  "**/__pycache__/**",
  "**/*.pyc",
  "**/.mypy_cache/**",
  "**/.pytest_cache/**",
  "**/*.egg-info/**",
  "**/build/**",
  "**/dist/**",
]

[tools.ruff]
# Source directories to format and lint
src = [ "tests", "pyproject.toml", "s2s" ]

# Exclude a variety of commonly ignored directories
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
  "deps",
]

# Always exclude the specified paths, even if explicitly included
force-exclude = true

# Set the maximum line length and indent width
line-length = 120
indent-width = 4

# Target Python version
target-version = "py312"

[tools.ruff.lint]
# Enable specific rule sets
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort (import sorting)
  "N",   # pep8-naming (naming conventions)
  "UP",  # pyupgrade (modern Python syntax)
  "B",   # flake8-bugbear (common bugs)
  "C4",  # flake8-comprehensions (list/dict comprehensions)
  "SIM", # flake8-simplify (code simplification)
  "RET", # flake8-return (return statements)
  "ARG", # flake8-unused-arguments
  "PTH", # flake8-use-pathlib (prefer pathlib over os.path)
  "PLE", # pylint (code quality and complexity)
  "RUF", # Ruff-specific rules
]

# Ignore specific rules
ignore = [
  "B008",    # Do not warn about function calls in default arguments
  "E501",
  "PLR0913",
  "PLR2004",
  "N801",
  "N802",
  "RUF001",  # There are some Chinese characters in comments and docstrings
  "RUF012",
  "ARG002",  # like ctx, it is often required by framework signatures
]

[tools.ruff.lint.isort]
# Sort imports taking into account case sensitivity.
case-sensitive = true

# Combine as imports on the same line
combine-as-imports = true

# Force each import to be on its own line
force-single-line = true

# Sort imports alphabetically within sections
force-sort-within-sections = true

# Define the order of import sections
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]

# Specify first-party packages for proper import grouping
known-first-party = [ "s2s" ]

# Force import from statements with multiple members and at least one alias (e.g., import A as B) to wrap such that
# every line contains exactly one member. For example, this formatting would be retained, rather than condensing to a
# single line:
force-wrap-aliases = true

[tools.ruff.lint.pydocstyle]
# Use Google-style docstring convention
convention = "google"

[tools.ruff.lint.pylint]
# Maximum number of arguments for function
max-args = 6

# Maximum number of local variables in function
max-locals = 20

# Maximum number of branch statements in function
max-branches = 15

[tools.ruff.format]
# Use double quotes for strings (like Black)
quote-style = "double"

# Indent with spaces rather than tabs (like Black)
indent-style = "space"

# Respect magic trailing commas for multi-line structures (like Black)
skip-magic-trailing-comma = false

# Automatically detect the appropriate line ending
line-ending = "auto"

# Enable preview mode for more aggressive formatting
preview = true

# Enable reformatting of code snippets in docstrings
docstring-code-format = true

# Format docstring code snippets with a line length of 80
docstring-code-line-length = 80
